# chatgpt-app

./: .eslintrc.cjs  .gitattributes  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
server/: Cargo.toml
server/src/: auth.rs  lib.rs  main.rs  service.rs
shared/: Cargo.toml
shared/src/: gpt.rs  lib.rs  network.rs  store.rs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.chatgpt/store.sled/: db  snap.000000000000290B
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: cmd.rs
src/api/: index.ts
src/assets/: recommend.json
src/components/common/PromptStore/: index.vue
src/components/common/Setting/: About.vue  General.vue  index.vue
src/components/common/SvgIcon/: index.vue
src/components/common/UserAvatar/: index.vue
src/hooks/: useLanguage.ts  useTheme.ts
src/icons/: 500.vue
src/locales/: en-US.ts  fr-FR.ts  index.ts  it-IT.ts  ko-KR.ts  ru-RU.ts  zh-CN.ts  zh-TW.ts
src/store/modules/app/: helper.ts
src/store/modules/auth/: index.ts
src/store/modules/user/: helper.ts
src/tauri/: index.ts
src/utils/request/: index.ts
src/views/chat/: index.vue
src/views/chat/components/Message/: Avatar.vue
src/views/chat/hooks/: useRefs.ts  useScroll.ts
src/views/chat/layout/sider/: Footer.vue  index.vue
