[package]
name = "server"
version = "0.1.0"
authors = ["Poordeveloper <zhb12345@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
http = "0.2"
futures = "0.3"
tokio-stream = "0.1"
shared = { path = "../shared" }
async-trait = "0.1"
headers = "0.3"
tower_governor = "0.0.4"
axum-streams = { version = "0.8", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
