[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-openai = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
futures = "0.3"
uuid = { version = "1.3", features = ["v4"] }
tiktoken-rs = { version = "0.4", features = ["async-openai"] }
once_cell = "1.17"
reqwest = { version = "0.11", default-features = false,  features = ["json", "rustls-tls", "socks"] }
rust-ini = "0.18"
env_logger = "0.10"
tokio = "1.28"
sled = "0.34"
dirs = "5.0"
